--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,18 +1,19 @@
+:root {
+    --blue: #1e90ff;
+    --white: #ffffff;
+    --mainColor: #EF2D56;
+}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-.container-fluid
-{
+.container-fluid {
     display: inline-block;
 }
 
-
-.egyes
-{
+.egyes {
     position: relative;
 }
 
-
-.kettes
-{
+.kettes {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -21,8 +22,7 @@
     text-align: center;
 }
 
-.harmas
-{
+.harmas {
     position: absolute;
     top: 100px;
     left: 450px;
@@ -39,6 +39,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .btn_comment {
     border: none;
     color: white;
@@ -56,17 +57,14 @@
     border: 1px solid #565ae3;
     border-radius: 4px;
 }
-.btn_comment:hover
-{
+
+.btn_comment:hover {
     border-radius: 15px;
     background-color: #008CBA;
     color: white;
-
-
 }
 
-.comment
-{
+.comment {
     width: 350px;
     height: 30px;
     padding: 6px 10px;
@@ -79,6 +77,7 @@
     margin-bottom: 3px;
     margin-left: 0px;
 }
+
 .comment_box {
     padding: 10px;
 }
@@ -86,41 +85,42 @@
 textarea {
     resize: none;
 }
-.comment_text {
 
+.comment_text {
     resize: none;
 }
-.hide
-{
-    show: none;
 
+.hide {
+    show: none;
 }
-.kep1
-{
+
+.kep1 {
     margin: auto auto;
     width: 550px;
     height: 300px;
 }
 
-.kulso
-{
+.kulso {
     display: INLINE-BLOCK;
     padding: 10px;
+    min-height: 100px;
 }
 
-
-.mas
-{
+.main_container {
     position: relative;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    height: 100%;
+    width: 100%;
 }
 
-.re
-{
+.re {
     float: right;
 }
 
-.reg2
-{
+.reg2 {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -129,145 +129,140 @@ textarea {
     align-items: flex-start;
 }
 
-.szoveg
-{
+.szoveg {
     text-align: justify;
 }
 
-aside
-{
-    float: left;
+aside {
     width: 160px;
-    margin: 0;
-    padding: 1em;
+    height: 100%;
+    padding-left: 1em;
+    padding-top: 1em;
     position: absolute;
-
-
+    background-color: var(--mainColor);
+    top: 85px;
+    left: 0px;
+    bottom: 0px;
 }
-a.link
-{
+
+a.link {
     vertical-align: middle;
     width:6em;
     text-decoration:none; 
     color:white;
-    background-color:Teal;
+    background-color: var(--mainColor);
     padding:0.2em 0.6em;
     border-right:1px solid white;
     border-radius: 4px;
-
 }
-a.menu
-{
-
+a.menu {
     float:left;
     width:8em;
     text-decoration:none;
     color:white;
-    background-color:Teal;
+    background-color:var(--mainColor);
     padding:0.2em 0.6em;
-    border-right:1px solid white;
     transition-duration: 1.2s;
-
-
 }
 
-a.selected { background-color: #5A5F60; }
+a.selected {
+    background-color: #5A5F60;
+}
 
-a:hover
-{
+a:hover {
     background-color: yellow;
     color: teal ;
     transition-duration: 0.6s;
-
 }
 
-body.nyit_background
-{
-    background-image: url('//images/kep1_bkg.jpg');
-    background-size: 100% 100%;
-    background-attachment: fixed;
-}
-body.hir_background
-{
-    background-image: url('//images/kep4_bkg.jpg');
-    background-size: 100% 100%;
-    background-attachment: fixed;
+body {
+    font-family: 'Poppins', sans-serif;    
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    height: 100%;
+    width: 100%;
 }
 
+div#user { 
+    float: right; 
+}
 
-div#user { float: right; }
-
-h1.header
-{
+h1.header {
     padding: 0;
     margin: 0;
     text-align: left;
 }
 
-header, footer
-{
+header {
     padding: 1.5em;
     color: white;
-    background-color: Teal;
+    background-color: var(--mainColor);
     clear: left;
 }
-img.like
-{
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    padding: 1.5em;
+    color: white;
+    background-color: var(--mainColor);
+    text-align: center;
+    width: 100%;
+}
+
+img.like {
     width: 20px;
     align: left;
     padding: 5px;
     vertical-align: middle;
-
 }
-img.like:hover
-{
+
+img.like:hover {
     width: 22px;
     transition-duration: 1s;
     padding: 4px;
 }
-label
-{
-    display: inline-block;
 
+label {
+    display: inline-block;
 }
-li { display:inline }
+
+li { 
+    display:inline 
+}
 
 section {
     margin-left: 190px;
-    border-left: 1px teal;
     padding: 1em;
+    height: 100%;
 }
+
 ul {
     float:left;
-    width:100%; /* A menü az alatta levő szövegtől elválik, birtokolja a teljes vízszintes sávját. */
+    width:100%; 
     padding:0;
     margin:0;
     list-style-type:none;
-    background-color: Teal;
+    background-color: var(--mainColor);
 }
 
-
-
-
-
-p#zold
-{
+p#zold {
     color:#89C23D;
-    font-family: Montserrat;
     font-size: 24px;
     text-align:center;
 }
-td,th
-{
+
+td,th {
     text-align:left;
-    font-family: Montserrat;
     font-size: 16px;
     color: #333333;
 }
-h2#kek,h1#kek
-{
+
+h2#kek,h1#kek {
     color:#164899;
-    font-family: Montserrat;
     font-size: 28px;
     text-align:center;
 }
