--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,269 +1,46 @@
-:root {
-    --blue: #1e90ff;
-    --white: #ffffff;
-    --mainColor: #EF2D56;
-}
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-
-.container-fluid {
-    display: inline-block;
-}
-
-.egyes {
-    position: relative;
-}
-
-.kettes {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
+header, footer {
+    padding: 0.5em; 
     color: white;
-    text-align: center;
+    background-color: gray;
+    clear: left;
 }
-
-.harmas {
-    position: absolute;
-    top: 100px;
-    left: 450px;
-    right: 40px;
-    color: white;
-    text-align: center;
-}
-
-.belso {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn_comment {
-    border: none;
-    color: white;
-    padding: 4px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    margin: 4px 2px;
-    margin-left: 0px;
-    transition-duration: 1s;
-    cursor: pointer;
-    background-color: white;
-    color: black;
-    border: 1px solid #565ae3;
-    border-radius: 4px;
-}
-
-.btn_comment:hover {
-    border-radius: 15px;
-    background-color: #008CBA;
-    color: white;
-}
-
-.comment {
-    width: 350px;
-    height: 30px;
-    padding: 6px 10px;
-    margin: -5px 8px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    margin-left: 0px;
-}
-
-.comment_box {
-    padding: 10px;
-}
-
-textarea {
-    resize: none;
-}
-
-.comment_text {
-    resize: none;
-}
-
-.hide {
-    show: none;
-}
-
-.kep1 {
-    margin: auto auto;
-    width: 550px;
-    height: 300px;
-}
-
-.kulso {
-    display: INLINE-BLOCK;
-    padding: 10px;
-    min-height: 100px;
-}
-
-.main_container {
-    position: relative;
-    top: 0px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px;
-    height: 100%;
-    width: 100%;
-}
-
-.re {
-    float: right;
-}
-
-.reg2 {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.szoveg {
-    text-align: justify;
-}
-
-aside {
-    width: 160px;
-    height: 100%;
-    padding-left: 1em;
-    padding-top: 1em;
-    position: absolute;
-    background-color: var(--mainColor);
-    top: 85px;
-    left: 0px;
-    bottom: 0px;
-}
-
-a.link {
-    vertical-align: middle;
-    width:6em;
-    text-decoration:none; 
-    color:white;
-    background-color: var(--mainColor);
-    padding:0.2em 0.6em;
-    border-right:1px solid white;
-    border-radius: 4px;
-}
-a.menu {
-    float:left;
-    width:8em;
-    text-decoration:none;
-    color:white;
-    background-color:var(--mainColor);
-    padding:0.2em 0.6em;
-    transition-duration: 1.2s;
-}
-
-a.selected {
-    background-color: #5A5F60;
-}
-
-a:hover {
-    background-color: yellow;
-    color: teal ;
-    transition-duration: 0.6s;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;    
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    height: 100%;
-    width: 100%;
-}
-
-div#user { 
-    float: right; 
-}
-
 h1.header {
     padding: 0;
     margin: 0;
-    text-align: left;
 }
-
-header {
-    padding: 1.5em;
-    color: white;
-    background-color: var(--mainColor);
-    clear: left;
+div#user {
+    float: right;
 }
-
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    padding: 1.5em;
-    color: white;
-    background-color: var(--mainColor);
-    text-align: center;
-    width: 100%;
+aside {
+    float: left;
+    width: 160px;
+    margin: 0;
+    padding: 1em;
 }
-
-img.like {
-    width: 20px;
-    align: left;
-    padding: 5px;
-    vertical-align: middle;
-}
-
-img.like:hover {
-    width: 22px;
-    transition-duration: 1s;
-    padding: 4px;
-}
-
-label {
-    display: inline-block;
-}
-
-li { 
-    display:inline 
-}
-
 section {
     margin-left: 190px;
+    border-left: 1px solid gray;
     padding: 1em;
-    height: 100%;
 }
-
 ul {
     float:left;
-    width:100%; 
+    width:100%; /* A menü az alatta levő szövegtől elválik, birtokolja a teljes vízszintes sávját. */
     padding:0;
     margin:0;
     list-style-type:none;
-    background-color: var(--mainColor);
+    background-color: lightblue;
+}        
+a {
+    float:left;
+    width:6em; /* Fix szélességű gombok érhetők el. Érdemes azonban vigyázni ezzel a módszerrel, mert ha a szöveg nem fér ki, a dizájn szétesik. */
+    text-decoration:none; /* Ne legyen aláhúzva a link. */
+    color:white;
+    background-color:navy;
+    padding:0.2em 0.6em;
+    border-right:1px solid white;
 }
-
-p#zold {
-    color:#89C23D;
-    font-size: 24px;
-    text-align:center;
+a.selected{
+    background-color: blue;
 }
-
-td,th {
-    text-align:left;
-    font-size: 16px;
-    color: #333333;
-}
-
-h2#kek,h1#kek {
-    color:#164899;
-    font-size: 28px;
-    text-align:center;
-}
-
+a:hover { background-color:#ff3300} /* Az egérkurzorra színváltással reagál a menüpont. */
+li { display:inline } /* Ez a sor oldja meg, hogy a menüpontok egymás mellé kerüljenek. */
