--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+body {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+
 
 .container-fluid
 {
@@ -138,37 +148,25 @@ aside
 {
     float: left;
     width: 160px;
-    margin: 0;
-    padding: 1em;
+    margin-left: 20px;
+    margin-top: 20px;
     position: absolute;
-
-
+    border-radius: 20px;
+    background-color: Teal;
 }
 a.link
 {
     vertical-align: middle;
-    width:6em; /* Fix szélességű gombok érhetők el. Érdemes azonban vigyázni ezzel a módszerrel, mert ha a szöveg nem fér ki, a dizájn szétesik. */
-    text-decoration:none; /* Ne legyen aláhúzva a link. */
+    width:6em;
+    text-decoration:none;
     color:white;
-    background-color:Teal;
-    padding:0.2em 0.6em;
-    border-right:1px solid white;
-    border-radius: 4px;
-
 }
-a.menu
-{
-
+a.menu {
     float:left;
     width:8em;
     text-decoration:none;
     color:white;
-    background-color:Teal;
-    padding:0.2em 0.6em;
-    border-right:1px solid white;
     transition-duration: 1.2s;
-
-
 }
 
 a.selected { background-color: #5A5F60; }
@@ -178,7 +176,6 @@ a:hover
     background-color: yellow;
     color: teal ;
     transition-duration: 0.6s;
-
 }
 
 body.nyit_background
@@ -204,12 +201,24 @@ h1.header
     text-align: left;
 }
 
-header, footer
+header
 {
     padding: 1.5em;
     color: white;
     background-color: Teal;
     clear: left;
+}
+footer
+{
+    padding: 1.5em;
+    color: white;
+    background-color: Teal;
+    clear: left;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 img.like
 {
@@ -243,7 +252,7 @@ ul {
     padding:0;
     margin:0;
     list-style-type:none;
-    background-color: Teal;
+    padding: 10px;
 }
 
 
