--- a/css/mnb.css
+++ b/css/mnb.css
@@ -1,17 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 .mnb_bkg {
-    background-image: url('/adastra/images/mnb-logo_bkg.jpg');
-    background-size: 100% 100%;
-    background-attachment: fixed;
+    background-color: blue;
 }
 .mnb {
     height: 50px;
     width: 200px;
     background: #91dada;
-    border: 3px solid black;
+    border: 3px solid teal;
     border-radius: 26px;
     box-sizing: border-box;
     padding: 5px 15px 7px;
-    font-family: Montserrat;
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-weight: bold;
     color: black;
@@ -24,11 +24,11 @@
     height: 50px;
     width: 100px;
     background: #91dada;
-    border: 3px solid black;
+    border: 3px solid teal;
     border-radius: 26px;
     box-sizing: border-box;
     padding: 5px 15px 7px;
-    font-family: Montserrat;
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-weight: bold;
     color: black;
