--- a/css/mnb.css
+++ b/css/mnb.css
@@ -1,42 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-.mnb_bkg {
-    background-color: blue;
+:root {
+    --blue: #1e90ff;
+    --whiteblue: #82c1ff;
+    --blackblue: #004180;
+    --white: #ffffff;
 }
+
+.mnb_main {
+    width: 100%;
+    height: 100%;
+    color: var(--blackblue);
+}
+
 .mnb {
     height: 50px;
     width: 200px;
-    background: #91dada;
-    border: 3px solid teal;
+    background: var(--whiteblue);
+    border: 3px solid var(--blue);
     border-radius: 26px;
     box-sizing: border-box;
     padding: 5px 15px 7px;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-weight: bold;
-    color: black;
+    color: var(--blackblue);
     z-index: 2;
     text-align: center;
+    margin-bottom: 5px;
 
 }
-
 .mnb_btn {
     height: 50px;
     width: 100px;
-    background: #91dada;
-    border: 3px solid teal;
+    background: var(--whiteblue);
+    border: 3px solid var(--blue);
     border-radius: 26px;
     box-sizing: border-box;
     padding: 5px 15px 7px;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-weight: bold;
-    color: black;
+    color: var(--blackblue);
     z-index: 2;
-
 }
 
 .select {
     font-size: 20px;
     font-weight: bold;
+}
+
+#myChart {
+    margin-bottom: 30px;
 }
