--- a/css/nyito.css
+++ b/css/nyito.css
@@ -1,10 +1,18 @@
+:root {
+  --blue: #1e90ff;
+  --whiteblue: #82c1ff;
+  --blackblue: #004180;
+  --white: #ffffff;
+}
+
 body {
   color: white;
 }
 
 .main {
-  background-color: Teal;
+  background-color: var(--blue);
   border-radius: 20px;
+  margin-bottom: 30px;
 }
 
 .cim {
