--- a/css/main_style.css
+++ b/css/main_style.css
@@ -2,8 +2,10 @@
 
 :root {
     --blue: #1e90ff;
+    --whiteblue: #82c1ff;
+    --blackblue: #004180;
     --white: #ffffff;
-}
+  }
 
 body {
     margin-top: 0px;
@@ -13,7 +15,9 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-
+h2 {
+    color: var(--blackblue);
+}
 .container-fluid
 {
     display: inline-block;
