--- a/css/main_style.css
+++ b/css/main_style.css
@@ -50,6 +50,20 @@ h2 {
     text-align: center;
 }
 
+.images {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    display:inline-flex;
+    gap: 1em;
+    text-align: justify;
+}
+img {
+    max-width: 600px;
+    height: fit-content;
+    border-radius: 20px;
+}
+
 .belso {
     display: flex;
     flex-direction: column;
@@ -80,8 +94,6 @@ h2 {
     border-radius: 15px;
     background-color: #008CBA;
     color: var(--white);
-
-
 }
 
 .comment
