--- a/css/nyito.css
+++ b/css/nyito.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 :root {
   --blue: #1e90ff;
   --whiteblue: #82c1ff;
@@ -13,6 +17,29 @@ body {
   background-color: var(--blue);
   border-radius: 20px;
   margin-bottom: 30px;
+}
+.main .section-1 .image-wrapper .bord-rad-yt-container {
+  width: 100%;
+}
+.main .section-1 .image-wrapper {
+  width: 50%;
+}
+.main .section-1, .section-2, .section-3 {
+  display: flex;
+}
+.main .section-1 .image-wrapper, .main .section-3 .image-wrapper { 
+  padding: 2rem;
+}
+.image-wrapper img {
+  width: 100%;
+}
+
+
+.main .text {
+  padding: 1rem;
+}
+.main .section-1, .section-2,{
+  padding: 1rem;
 }
 
 .cim {
@@ -63,4 +90,15 @@ body {
 .textNormal {
   padding: 20px;
   text-align: justify;
+}
+
+
+@media(max-width: 992px) {
+  .main .section-1, .section-2, .section-3  {
+    flex-direction: column;
+  }
+  .section-1  .image-wrapper, .section-3 .image-wrapper {
+    text-align: center;
+    width: 100% !important;
+  }
 }
